--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "links",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://GmAbhishek.github.io/GmAbhishek.github.io",
+  "homepage": "https://GmAbhishek.github.io",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -19,6 +19,8 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
+    "predeploy": "yarn build",
+  "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
